--- a/OnMyWay/.classpath
+++ b/OnMyWay/.classpath
@@ -3,22 +3,22 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="libs/Parse-1.9.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/D:/Developer/Android/Libraries/Parse%201.9/Parse-1.9.0-javadoc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="libs/ParseCrashReporting-1.9.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/D:/Developer/Android/Libraries/Parse%201.9/ParseCrashReporting-1.9.0-javadoc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="libs/ParseFacebookUtilsV4-1.9.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/D:/Developer/Android/Libraries/Parse%201.9/ParseFacebookUtilsV4-1.9.0-javadoc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="libs/Parse-1.9.0.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/Users/mvbrenes/Developer/Android/Libraries/Parse-1.9.0/Parse-1.9.0-javadoc/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="libs/ParseCrashReporting-1.9.0.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/Users/mvbrenes/Developer/Android/Libraries/Parse-1.9.0/ParseCrashReporting-1.9.0-javadoc/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="libs/ParseFacebookUtilsV4-1.9.0.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/Users/mvbrenes/Developer/Android/Libraries/Parse-1.9.0/ParseFacebookUtilsV4-1.9.0-javadoc/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
