--- a/OnMyWay/project.properties
+++ b/OnMyWay/project.properties
@@ -12,5 +12,6 @@
 
 # Project target.
 target=android-22
-android.library.reference.1=../facebook
-android.library.reference.2=../android-support-v7-appcompat
+android.library.reference.1=..\\..\\..\\Documents\\School Workspace\\Final Project Workspace\\facebook
+android.library.reference.2=..\\..\\..\\Documents\\School Workspace\\Final Project Workspace\\android-support-v7-appcompat
+android.library.reference.3=../../../Documents/School Workspace/Final Project Workspace/ParseLoginUI
