--- a/OnMyWay/project.properties
+++ b/OnMyWay/project.properties
@@ -12,6 +12,7 @@
 
 # Project target.
 target=android-22
-android.library.reference.1=..\\..\\..\\Documents\\School Workspace\\Final Project Workspace\\facebook
-android.library.reference.2=..\\..\\..\\Documents\\School Workspace\\Final Project Workspace\\android-support-v7-appcompat
-android.library.reference.3=../../../Documents/School Workspace/Final Project Workspace/ParseLoginUI
+android.library.reference.1=../ParseLoginUI
+android.library.reference.2=../facebook
+android.library.reference.3=../android-support-v7-appcompat
+android.library.reference.4=../google-play-services_lib
