--- a/OnMyWay/AndroidManifest.xml
+++ b/OnMyWay/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:targetSdkVersion="22" />
 
     <application
-        android:name="dev.virco.onmyway.OnMyWayApplication"
+        android:name=".OnMyWayApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -35,6 +35,10 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
+            android:name=".ListActivity"
+            android:label="@string/title_activity_list" >
+        </activity>
     </application>
 
 </manifest>
