--- a/OnMyWay/AndroidManifest.xml
+++ b/OnMyWay/AndroidManifest.xml
@@ -16,11 +16,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/MyTheme" >
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
- >
+ >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
